--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
         "moment": "^2.30.1",
         "radix-ui": "^1.1.3",
         "react": "^19.0.0",
+        "react-data-table": "^0.1.0",
+        "react-data-table-component": "^7.7.0",
         "react-day-picker": "^9.6.6",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
