--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@emotion/styled": "^11.14.1",
         "@hookform/resolvers": "^4.1.3",
+        "@mui/styled-engine": "^7.3.1",
+        "@mui/x-charts-pro": "^8.10.1",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-aspect-ratio": "^1.1.2",
