--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "vue": "^3.2.37"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^4.1.3",
+    "@mui/material": "^7.3.1",
     "@mui/styled-engine": "^7.3.1",
+    "@mui/x-charts": "^8.10.2",
     "@mui/x-charts-pro": "^8.10.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -84,6 +87,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
