--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^4.6",
         "livewire/livewire": "^3.6",
         "pusher/pusher-php-server": "^7.2",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "yajra/laravel-address": "^12.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
