--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
+        "jimmyjs/laravel-report-generator": "2.1",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "^3.1",
         "livewire/livewire": "^3.6",
+        "phpmailer/phpmailer": "^7.0",
         "pusher/pusher-php-server": "^7.2",
         "tightenco/ziggy": "^2.0",
         "yajra/laravel-address": "^12.2"
