--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "laravel-vite-plugin": "^1.2.0",
     "postcss": "^8.4.31",
     "pusher-js": "^8.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.56.1",
     "tailwindcss": "^3.2.1",
     "typescript": "^5.8.2",
@@ -67,6 +67,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.49.3",
     "@types/swiper": "^5.4.3",
     "apexcharts": "^4.5.0",
@@ -77,16 +78,14 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.3",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
     "motion": "^12.23.13",
     "radix-ui": "^1.1.3",
-    "react": "^19.0.0",
     "react-data-table": "^0.1.0",
     "react-data-table-component": "^7.7.0",
     "react-day-picker": "^9.8.1",
-    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
