--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@supabase/supabase-js": "^2.49.3",
     "@types/swiper": "^5.4.3",
     "apexcharts": "^4.5.0",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -84,6 +85,7 @@
     "motion": "^12.23.13",
     "pako": "^2.1.0",
     "radix-ui": "^1.1.3",
+    "react-chartjs-2": "^5.3.0",
     "react-data-table": "^0.1.0",
     "react-data-table-component": "^7.7.0",
     "react-day-picker": "^9.8.1",
